<resources>
    <string name="app_name">Site 3 Membership Kiosk</string>

    <string name="title_your_information">Your Information</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="title_payment_information">Payment Information</string>
    <string name="hint_payment_card_number">Card number</string>
    <string name="hint_payment_expiry">MM / YY</string>
    <string name="hint_payment_ccv">CCV</string>
    <string name="button_finish_application">Apply to Site 3</string>
    <string name="manually_add_rfid">Manually Enter RFID</string>
    <string name="enable_vending_machine">Enable fob for vending machines</string>
    <string name="title_success">Success</string>
    <string name="text_success">Your membership application was successful! However your application still needs to be approved before you are a member of Site 3.</string>
</resources>
